--- a/ngnix.conf
+++ b/ngnix.conf
@@ -19,8 +19,6 @@ http {
     gzip on;
     gzip_disable "msie6";
 
-    fastopen: 256
-
     # SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
@@ -34,13 +32,13 @@ http {
     resolver_timeout 5s;
 
     upstream webapis {
-        server localhost:5000;
-        server localhost:5001;
+        server webapi1:8080;
+        server webapi2:8080;
     }
 
     server {
         listen 9999;
-        server_name rinha-backend;
+        server_name localhost;
 
         location / {
             proxy_pass http://webapis;
@@ -53,6 +51,5 @@ http {
     }
 
     # Cache configuration
-    proxy_cache_path /path/to/cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m use_temp_path=off;
-
+    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m use_temp_path=off;
 }
