WIP: Finishes testing first database methods.

--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Postgres": "Server=postgres;Port=5432;Database=rinha_backend;User Id=postgres;Password=postgres;"
+  }
 }
