--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Postgres": "Server=localhost;Port=5432;Database=rinha_backend;User Id=postgres;Password=postgres;"
   }
 }
