Make containers build, still breaking in requests send

--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/Awarean.BrayaOrtega.RinhaBackend.Q124.csproj
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/Awarean.BrayaOrtega.RinhaBackend.Q124.csproj
@@ -4,12 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <InvariantGlobalization>true</InvariantGlobalization>
     <RootNamespace>Awarean.BrayaOrtega.RinhaBackend.Q124</RootNamespace>
     <UserSecretsId>fd7fb28e-6bc7-4f43-9d8d-df151bca06e7</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>.</DockerfileContext>
+    <OptimizationPreference>Speed</OptimizationPreference>
+    <InvariantGlobalization>true</InvariantGlobalization>
+    <PublishAot>true</PublishAot>
   </PropertyGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
