--- a/Dockerfile.Application
+++ b/Dockerfile.Application
@@ -1,10 +1,9 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
+FROM mcr.microsoft.com/dotnet/nightly/runtime-deps:8.0.2-alpine3.19-aot-amd64 AS base
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+FROM mcr.microsoft.com/dotnet/nightly/sdk:8.0.200-alpine3.19-aot-amd64 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Awarean.BrayaOrtega.RinhaBackend.Q124/Awarean.BrayaOrtega.RinhaBackend.Q124.csproj", "Awarean.BrayaOrtega.RinhaBackend.Q124/"]
@@ -15,9 +14,11 @@ RUN dotnet build "./Awarean.BrayaOrtega.RinhaBackend.Q124.csproj" -c $BUILD_CONF
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Awarean.BrayaOrtega.RinhaBackend.Q124.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Awarean.BrayaOrtega.RinhaBackend.Q124.csproj" \
+    -c $BUILD_CONFIGURATION \
+    -o /app/publish /p:UseAppHost=true
 
-FROM base AS final
+FROM base as final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Awarean.BrayaOrtega.RinhaBackend.Q124.dll"]
+ENTRYPOINT ["/app/Awarean.BrayaOrtega.RinhaBackend.Q124"]
