WIP: Starts using npgsql instead of ef, changes for aot

--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Server=localhost;Port=5432;Database=rinha_backend;User Id=postgres;Password=postgres;"
+    "Postgres": "Server=localhost;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;"
   }
 }
