--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Server=postgres;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;"
+    "Postgres": "Server=postgres;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;",
+    "Redis": "cache,password=redis,ssl=False"
   }
 }
