Should have commited before, caches, redis a lot of stuff done, still not working

--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Postgres": "Server=postgres;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;",
-    "Redis": "cache,password=redis,ssl=False"
+    "Postgres": "Server=postgres;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;Timeout=15;",
+    "Redis": "cache:6379,password=redis,ssl=false"
   }
 }
