--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Server=localhost;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;",
+    "Postgres": "Server=localhost;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;Timeout=15;",
     "Redis": "localhost:6379,password=redis,ssl=False"
   }
 }
