--- a/ngnix.conf
+++ b/ngnix.conf
@@ -1,4 +1,4 @@
-worker_processes 20;
+worker_processes 10;
 
 events {
     worker_connections 4096;
@@ -6,30 +6,25 @@ events {
 
 http {
     include mime.types;
-    default_type application/octet-stream;
+    default_type application/json;
 
-    sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
-    keepalive_requests 1000;
+    keepalive_requests 500;
 
     types_hash_max_size 2048;
 
     gzip on;
-    gzip_disable "msie6";
+    gzip_types text/plain text/css application/javascript application/json image/svg+xml;
+    gzip_vary on;
+    gzip_min_length 10240;
+    gzip_comp_level 5;
+    gzip_proxied any;
 
-    # SSL configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-    ssl_session_tickets off;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    resolver 8.8.8.8 8.8.4.4 valid=300s;
-    resolver_timeout 5s;
+    client_body_timeout 12;
+    client_header_timeout 12;
+    send_timeout 10;
 
     upstream webapis {
         server webapi1:8080;
@@ -49,7 +44,4 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
     }
-
-    # Cache configuration
-    proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m use_temp_path=off;
 }
