Implements NATS message publishing/handling for updates, makes nginx its own container without dockerfile, removes redis.

--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Postgres": "Server=postgres;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;Timeout=15;",
-    "Redis": "cache:6379,password=redis,ssl=false"
+    "Nats": "messagequeue:4222"
   }
 }
