--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
@@ -10,6 +10,6 @@
     "Redis": "localhost:6379,password=redis,ssl=False",
     "Nats": "localhost:4222"
   },
-  "NATS_DESTINATION": "SELF",
-  "NATS_OWN": "SELF"
+  "NATS_DESTINATION": "Transaction",
+  "NATS_OWN": "Transaction"
 }
