--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,11 @@
 worker_processes 4;
 
-worker_rlimit_nofile 65535;
-
-pid /run/nginx.pid;
 
 events {
-    worker_connections 65535;
-
-    multi_accept on;
-
     use epoll;
 }
 
 http {
-    include mime.types;
-    default_type application/json;
-    types_hash_max_size 2048;
-    
     tcp_nopush on;
     tcp_nodelay on;
     keepalive_timeout 65;
@@ -49,14 +38,15 @@ http {
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
 
-    access_log off;
-    error_log off;
+    access_log on;
+    error_log onn;
 
     upstream webapis {
         server webapi1:8080;
         server webapi1:8081;
         server webapi2:8080;
         server webapi2:8081;
+        keepalive 250;
     }
 
     server {
@@ -65,6 +55,7 @@ http {
 
         location / {
             proxy_pass http://webapis;
+            proxy_buffering off;
         }
     }
 }
