--- a/Awarean.BrayaOrtega.RinhaBackend.Q124.Tests/Awarean.BrayaOrtega.RinhaBackend.Q124.Tests.csproj
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124.Tests/Awarean.BrayaOrtega.RinhaBackend.Q124.Tests.csproj
@@ -6,11 +6,14 @@
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+    <PreserveCompilationContext>true</PreserveCompilationContext>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="fluentAssertions" Version="6.12.0" />
+    <PackageReference Include="Flurl.Http" Version="4.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="NSubstitute" Version="5.1.0" />
     <PackageReference Include="xunit" Version="2.4.2" />
