--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,8 +12,8 @@ services:
       - DOTNET_TieredPGO=1
       - DOTNET_ReadyToRun=0
       - DOTNET_TC_QuickJitForLoops=1
-      - NATS_DESTINATION=api02
-      - NATS_OWN=api01
+      - NATS_DESTINATION=Transaction
+      - NATS_OWN=Transaction
     networks:
       - rinha_network
     ports:
@@ -25,18 +25,15 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.35"
-          memory: "50MB"
+          cpus: "0.4"
+          memory: "120MB"
 
   webapi2:
     <<: *api 
     hostname: webapi2
     environment:
-      - NATS_DESTINATION=api01
-      - NATS_OWN=api02
-    ports:
-      - "8080"
-      - "8081"
+      - NATS_DESTINATION=Transaction
+      - NATS_OWN=Transaction
 
   load-balancer:
     image: nginx:1.24.0-alpine
@@ -66,7 +63,7 @@ services:
       resources:
         limits:
           cpus: "0.15"
-          memory: "30MB"
+          memory: "15MB"
 
   cache:
     image: redis:alpine
@@ -79,8 +76,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.2"
-          memory: "40MB"
+          cpus: "0.15"
+          memory: "20MB"
           
   postgres:
     image: postgres
@@ -104,8 +101,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "0.5"
-          memory: "350MB"
+          cpus: "0.3"
+          memory: "200MB"
 
 networks:
   rinha_network:
