--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,11 @@
-worker_processes 4;
-
+worker_processes auto;
 
 events {
+    worker_connection 65536;
     use epoll;
 }
 
 http {
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    keepalive_requests 500;
-
     gzip on;
     gzip_vary on;
     gzip_comp_level 9;
@@ -22,24 +17,13 @@ http {
     client_header_timeout 32;
     send_timeout 120;
 
-    sendfile on;
-
-    include /etc/nginx/conf.d/*.conf;
-
-    reset_timedout_connection on;
-
     client_body_buffer_size 10K;
     client_header_buffer_size 1k;
     client_max_body_size 8m;
     large_client_header_buffers 2 1k;
 
-    open_file_cache max=200000 inactive=20s;
-    open_file_cache_valid 30s;
-    open_file_cache_min_uses 2;
-    open_file_cache_errors on;
-
     access_log on;
-    error_log onn;
+    error_log on;
 
     upstream webapis {
         server webapi1:8080;
