--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,10 @@
-worker_processes auto;
+worker_processes 4;
+
+worker_rlimit_nofile 65536;
 
 events {
-    worker_connection 65536;
     use epoll;
+    worker_connections 16384;
 }
 
 http {
@@ -21,25 +23,19 @@ http {
     client_header_buffer_size 1k;
     client_max_body_size 8m;
     large_client_header_buffers 2 1k;
-
-    access_log on;
-    error_log on;
-
     upstream webapis {
-        server webapi1:8080;
-        server webapi1:8081;
-        server webapi2:8080;
-        server webapi2:8081;
-        keepalive 250;
+        zone upstreams 64K;
+        server webapi1:8080 max_fails=1 fail_timeout=2s;
+        server webapi2:8080 max_fails=1 fail_timeout=2s;
+        keepalive 4;
     }
 
     server {
         listen 9999;
-        server_name localhost;
 
         location / {
             proxy_pass http://webapis;
-            proxy_buffering off;
+            proxy_buffering on;
         }
     }
 }
