Adds configs to bypass cache, still needs improvements

--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.json
@@ -12,5 +12,6 @@
     "Nats": "messagequeue:4222"
   },
   "NATS_DESTINATION": "Transaction",
-  "NATS_OWN": "Transaction"
+  "NATS_OWN": "Transaction",
+  "BYPASS_CACHE": false
 }
