--- a/nginx.conf
+++ b/nginx.conf
@@ -1,16 +1,13 @@
 worker_processes 4;
 
+worker_rlimit_nofile 65536;
 
 events {
     use epoll;
+    worker_connections 16384;
 }
 
 http {
-    tcp_nopush on;
-    tcp_nodelay on;
-    keepalive_timeout 65;
-    keepalive_requests 500;
-
     gzip on;
     gzip_vary on;
     gzip_comp_level 9;
@@ -22,40 +19,23 @@ http {
     client_header_timeout 32;
     send_timeout 120;
 
-    sendfile on;
-
-    include /etc/nginx/conf.d/*.conf;
-
-    reset_timedout_connection on;
-
     client_body_buffer_size 10K;
     client_header_buffer_size 1k;
     client_max_body_size 8m;
     large_client_header_buffers 2 1k;
-
-    open_file_cache max=200000 inactive=20s;
-    open_file_cache_valid 30s;
-    open_file_cache_min_uses 2;
-    open_file_cache_errors on;
-
-    access_log on;
-    error_log onn;
-
     upstream webapis {
-        server webapi1:8080;
-        server webapi1:8081;
-        server webapi2:8080;
-        server webapi2:8081;
-        keepalive 250;
+        zone upstreams 64K;
+        server webapi1:8080 max_fails=1 fail_timeout=2s;
+        server webapi2:8080 max_fails=1 fail_timeout=2s;
+        keepalive 4;
     }
 
     server {
         listen 9999;
-        server_name localhost;
 
         location / {
             proxy_pass http://webapis;
-            proxy_buffering off;
+            proxy_buffering on;
         }
     }
 }
