--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       context: .
       dockerfile: Dockerfile.Application
     environment:
+      - BYPASS_CACHE=False
       - ASPNETCORE_URLS=http://+:8080
       - ASPNETCORE_ENVIRONMENT=Production
       - DOTNET_TieredPGO=1
@@ -21,6 +22,7 @@ services:
     depends_on:
       - postgres
       - messagequeue
+      - cache
     deploy:
       resources:
         limits:
