--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/Awarean.BrayaOrtega.RinhaBackend.Q124.csproj
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/Awarean.BrayaOrtega.RinhaBackend.Q124.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="NATS.Client.Serializers.Json" Version="2.1.1" />
     <PackageReference Include="Nats.Net" Version="2.1.1" />
     <PackageReference Include="Npgsql" Version="8.0.2" />
+    <PackageReference Include="Redlock.NET" Version="2.3.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.7.20" />
   </ItemGroup>
 
