--- a/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
+++ b/Awarean.BrayaOrtega.RinhaBackend.Q124/appsettings.Development.json
@@ -6,9 +6,15 @@
     }
   },
   "ConnectionStrings": {
-    "Postgres": "Server=localhost;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;Timeout=15;",
+    "Postgres": "Server=localhost;Port=5432;Database=rinha_database;User Id=postgres;Password=postgres;Timeout=30;",
     "Redis": "localhost:6379,password=redis,ssl=False",
     "Nats": "localhost:4222"
+  },
+  "RedLock": {
+    "ConnectionString": "localhost:6379,password=redis,ssl=False",
+    "LockRetryCount": 5,
+    "LockRetryDelay": "00:00:00.30",
+    "ClockDriveFactor": 0.02
   },
   "NATS_DESTINATION": "Transaction",
   "NATS_OWN": "Transaction"
