--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -92,10 +92,11 @@ services:
     ports:
       - "5432:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready", "-d", "postgres" ]
       interval: 5s
-      timeout: 5s
+      timeout: 10s
       retries: 5
+      start_period: 10s
     volumes:
       - ./postgres:/docker-entrypoint-initdb.d
     command: [ "postgres", "-c", "config_file=/docker-entrypoint-initdb.d/postgres.conf" ]
