--- a/postgres/postgres.conf
+++ b/postgres/postgres.conf
@@ -1,26 +1,20 @@
 listen_addresses = '*'
-
-max_connections = 150
-shared_buffers = 256MB
-work_mem = 8MB
-wal_buffers = 64MB
-maintenance_work_mem = 256MB
+max_connections = 2000
+superuser_reserved_connections = 3
 unix_socket_directories = '/var/run/postgresql'
-
-effective_io_concurrency = 50
+shared_buffers = 40MB
+work_mem = 16MB
+maintenance_work_mem = 256MB
 effective_cache_size = 1GB
-synchronous_commit = off
-
+wal_buffers = 64MB
+checkpoint_timeout = 10min
+checkpoint_completion_target = 0.95
+random_page_cost = 4.0
+effective_io_concurrency = 2
+autovacuum = on
 log_statement = 'none'
 log_duration = off
 log_lock_waits = on
 log_error_verbosity = terse
 log_min_messages = panic
 log_min_error_statement = panic
-
-checkpoint_timeout = 15min
-checkpoint_warning = 5min
-min_wal_size = 1GB
-max_wal_size = 2GB
-
-autovacuum_max_workers = 5
